# DataFetcher

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
DataFetcher/: APIFetcherModule.py
airflow/dags/: .airflowignore  extract_blog_dag.py  extract_portal_dag.py  pull_from_portal_dag.py
datafetcher/: api_fetcher.py
src/config/: config_template.py
src/extract/: extract_portal.py
src/extract_blog/: config.py  extract_blog_url.py  log.py  search.py  util.py
src/extract_blog/blog/: error.py  extract_blog_url.py  log.py  search.py  util.py
src/extract_keyword/: extract_keyword.py
src/extract_portal/: extract_portal.py
src/load/: load_data.py  load_meta_data.py  load_minio_portal_data.py  load_portal.py  load_portal_meta.py  load_potal_meta.py
tests/: APIFetcherTest.py  api_fetcher_test.py  blog_crawling_test.py  db_connection_test.py
